test/files/neg/bug987.check
bug987.scala:15: error: the type intersection B[D] with B[C] is malformed
 --- because ---
no common type instance of base types B[C] and B[D] exists
class E extends D
^
bug987.scala:20: error: illegal cyclic reference involving class E
class F extends D
^
two errors found
